--- a/ImageOnTopTool/MainWindow.xaml
+++ b/ImageOnTopTool/MainWindow.xaml
@@ -14,6 +14,7 @@
         BorderThickness="1"
         MouseEnter="Window_MouseEnter"
         MouseLeave="Window_MouseLeave"
+        Closing="Window_Closing"
         ResizeMode="CanResize"
         Title="Image on top tool" Height="450" Width="600" MinWidth="40" MinHeight="40">
     <Window.CommandBindings>
@@ -27,27 +28,6 @@
                     <WindowChrome CaptionHeight="0" GlassFrameThickness="3" ResizeBorderThickness="3" />
                 </Setter.Value>
             </Setter>
-            <!--<Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Window">
-                        <Border Padding="10">
-                            <Border Background="White"
-                                    BorderBrush="Black"
-                                    BorderThickness="1"
-                                    CornerRadius="4"
-                                    SnapsToDevicePixels="True">
-                                --><!--阴影效果-->
-                                <!--<Border.Effect>
-                                    <DropShadowEffect BlurRadius="10"
-                                                      Direction="0"
-                                                      ShadowDepth="0" />
-                                </Border.Effect>--><!--
-                                <ContentPresenter />
-                            </Border>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>-->
         </Style>
     </Window.Style>
     <Grid>
